[package]
name = "lineup-tracker-rust"
version = "1.0.0"
edition = "2021"
license = "GPL-3-or-later"
keywords = [ "valorant", "cs:go", "tui", "game" ]
readme = "README.md"
repository = "https://github.com/TheSignPainter98/lineup-tracker-rs"
authors = [ "kcza" ]
description = "A minimalist progress tracker for lineups"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.18.0"
crossterm = "0.23"
unicode-width = "0.1.7"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_with = "1.13"
shellexpand = "2.1"
regex = "1"
lazy_static = "1.4"
